k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: learner-backend
  labels:
    app: learner-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: learner-backend
  template:
    metadata:
      labels:
        app: learner-backend
    spec:
      containers:
        - name: backend
          image: 975050024946.dkr.ecr.ca-central-1.amazonaws.com/aviral/learnerreport-backend:latest
          ports:
            - containerPort: 3001
          livenessProbe:
            httpGet:
              path: /api/health
              port: 3001
            initialDelaySeconds: 10
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /api/health
              port: 3001
            initialDelaySeconds: 5
            periodSeconds: 5
          resources:
            requests:
              cpu: "200m"
              memory: "256Mi"
            limits:
              cpu: "1"
              memory: "1Gi"
