k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: learner-frontend
  labels:
    app: learner-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: learner-frontend
  template:
    metadata:
      labels:
        app: learner-frontend
    spec:
      containers:
        - name: frontend
          image: 975050024946.dkr.ecr.ca-central-1.amazonaws.com/aviral/learnerreport-frontend:latest
          ports:
            - containerPort: 3000
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 20
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 5
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
